[gd_scene load_steps=6 format=2]

[ext_resource path="res://tileset.png" type="Texture" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://PowerUpTile.gd" type="Script" id=3]
[ext_resource path="res://StateTile.gd" type="Script" id=4]
[ext_resource path="res://StatsBar.gd" type="Script" id=5]

[node name="StatsBar" type="Node2D"]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player2" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="Player2"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 64, 64, 64 )
script = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Player2"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, -96 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 64, 64, 64 )
script = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Player2"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, -160 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 64, 64, 64 )
script = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Player2"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, -224 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 64, 64, 64 )
script = ExtResource( 4 )

[node name="PowerUp" type="Sprite" parent="Player2"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, -288 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 224, 0, 64, 64 )
script = ExtResource( 3 )

[node name="Player1" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="Player1"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, 32 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 64, 64, 64 )
script = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Player1"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, 96 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 64, 64, 64 )
script = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Player1"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, 160 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 64, 64, 64 )
script = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Player1"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, 224 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 64, 64, 64 )
script = ExtResource( 4 )

[node name="PowerUp" type="Sprite" parent="Player1"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, 288 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 224, 0, 64, 64 )
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 2.5, 2.5, 2.5, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -589825, 2, 0, -655360, 2, 2, -524289, 2, 65536, -589824, 2, 65538, -458753, 2, 65536, -524288, 2, 65538, -393217, 2, 65536, -458752, 2, 65538, -327681, 2, 65536, -393216, 2, 65538, -262145, 2, 65536, -327680, 2, 65538, -196609, 2, 65536, -262144, 2, 65538, -131073, 2, 65536, -196608, 2, 65538, -65537, 2, 65536, -131072, 2, 65538, -1, 2, 65536, -65536, 2, 65538, 65535, 0, 65536, 0, 0, 65538, 131071, 0, 65536, 65536, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 262143, 0, 65536, 196608, 0, 65538, 327679, 0, 65536, 262144, 0, 65538, 393215, 0, 65536, 327680, 0, 65538, 458751, 0, 65536, 393216, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 655359, 0, 131072, 589824, 0, 131074 )
